qa ページトップボタン作成

--- a/index.html
+++ b/index.html
@@ -134,7 +134,108 @@
                     </div>
                 </div>
             </section>
+
+            <!-- qa -->
+            <section class="qa">
+                <h3 class="qa-container__title">
+                    <span class="qa__title">Q&A</span>
+                    <span class="qa__sub-title">よくあるご質問</span>
+                </h3>
+                <!-- アコーディオン -->
+                <div class="qa-answer--container">
+                    <!-- 1つ目 -->
+                    <div class="qa-answer--box">
+                        <div class="qa-box accordion-content open">
+                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa-icon">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </div>
+                        </div>
+                        <div class="answer-container">
+                            <div class="answer-box">
+                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 2つ目 -->
+                    <div class="qa-answer--box">
+                        <div class="qa-box accordion-content open">
+                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa-icon">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </div>
+                        </div>
+                        <div class="answer-container">
+                            <div class="answer-box">
+                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 3つ目 -->
+                    <div class="qa-answer--box">
+                        <div class="qa-box accordion-content open">
+                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa-icon">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </div>
+                        </div>
+                        <div class="answer-container">
+                            <div class="answer-box">
+                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 4つ目 -->
+                    <div class="qa-answer--box">
+                        <div class="qa-box accordion-content open">
+                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa-icon">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </div>
+                        </div>
+                        <div class="answer-container">
+                            <div class="answer-box">
+                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 5つ目 -->
+                    <div class="qa-answer--box">
+                        <div class="qa-box accordion-content open">
+                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa-icon">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </div>
+                        </div>
+                        <div class="answer-container">
+                            <div class="answer-box">
+                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- 問い合わせ -->
+            <div class="btn-container">
+                <div class="btn-container__box">
+                    <div class="btn-container__text-box">
+                        <p class="btn-container__text">キラメキクリーム</p>
+                        <p class="btn-container__price">税込4,000円</p>
+                    </div>
+                    <!-- ボタン -->
+                    <div class="btn__box">
+                        <a href="#" class="button button--blue">オンラインショップへ</a>
+                        <a href="/cart/" class="button button--green">購入する</a>
+                    </div>
+                </div>
+            </div>
+            <!-- ページトップボタン -->
+            <a href="#" id="button-to-top" class="button-to-top">
+                <i class="bi bi-arrow-up-short"></i>
+            </a>
         </main>
+
         <footer></footer>
 
         <!-- jQuery -->
