--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
         <!-- ヘッダー -->
         <header class="header">
-            <h1>Kira-meki</h1>
+            <a href="#"><h1>Kira-meki</h1></a>
 
         </header>
 
@@ -236,7 +236,23 @@
             </a>
         </main>
 
-        <footer></footer>
+        <footer class="footer">
+            <h4 class="footer_logo"><a href="#"><img src="/assets/image/footer_logo01.png" alt="Kira-meki"></a></h4>
+            <nav class="footer-nav">
+                <ul class="footer-nav__list">
+                    <li class="footer-nav__item">
+                        <a href="/company/">会社概要</a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href="/privacy-policy/">個人情報保護ポリシー</a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href="/contact/">お問い合わせ</a>
+                    </li>
+                </ul>
+            </nav>
+            <small class="footer-copyright">© 2023 Kira-meki Inc. All rights reserved.</small>
+        </footer>
 
         <!-- jQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
