--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     <body>
         <!-- ヘッダー -->
         <header class="header">
-            <a href="#"><h1>Kira-meki</h1></a>
+            <h1><a href="#"><img src="/assets/image/header_logo.png" alt="Kira-meki"></a></h1>
 
         </header>
 
         <main>
             <!-- カバー -->
             <section class="cover">
-                <div class="cover__contents-width">
+                <div class="cover__contents__width">
                     <div class="cover__contents">
-                        <h2 class="cover__contents--box">
-                            <span class="cover__wrapper-text--title">Kirameki</span>
-                            <span class="cover__wrapper-text--title">Cream</span>
-                            <p class="cover__wrapper-text--catch">肌のうるおい、煌めく。</p>
+                        <h2 class="cover__contents__box">
+                            <span class="cover__title--main">Kirameki</span>
+                            <span class="cover__title--main">Cream</span>
+                            <span class="cover__title--sub">肌のうるおい、煌めく。</span>
                         </h2>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
 
             <!-- 問い合わせ -->
             <div class="btn-container">
-                <div class="btn-container__box">
+                <div class="btn-container__btn-box">
                     <div class="btn-container__text-box">
                         <p class="btn-container__text">キラメキクリーム</p>
                         <p class="btn-container__price">税込4,000円</p>
@@ -65,11 +65,11 @@
             </div>
 
             <!-- PR -->
-            <section class="pr-container">
+            <section class="pr__container">
                 <div class="pr__contents-width">
                     <div class="pr__contents">
                         <h3 class="pr__title">Keep Your Skin Beautiful.</h3>
-                        <p class="pr__sub--title">お肌を美しく保つ</p>
+                        <p class="pr__title-sub">お肌を美しく保つ</p>
                         <p class="pr__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
                     </div>
                 </div>
@@ -77,139 +77,139 @@
 
             <!-- voice -->
             <section class="voice">
-                <h3 class="voice-container__title">
+                <h3 class="voice__container-title">
                     <span class="voice__title">Voices</span>
-                    <span class="voice__sub-title">お客様の声</span>
+                    <span class="voice__title-sub">お客様の声</span>
                 </h3>
 
                 <!-- slick -->
                 <div class="voice__slick">
                     <!-- 1枚目 -->
-                    <div class="voice-container--box">
+                    <div class="voice__box">
                         <div class="voice__img">
                             <img src="/assets/image/voice01.jpg" alt="">
                         </div>
-                        <p class="voice_name">Aさん</p>
-                        <p class="voice_text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                        <p class="voice__name">Aさん</p>
+                        <p class="voice__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
                     </div>
                     <!-- 2枚目 -->
-                    <div class="voice-container--box">
+                    <div class="voice__box">
                         <div class="voice__img">
                             <img src="/assets/image/voice02.jpg" alt="">
                         </div>
-                        <p class="voice_name">Bさん</p>
-                        <p class="voice_text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                        <p class="voice__name">Bさん</p>
+                        <p class="voice__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
                     </div>
                     <!-- 3枚目 -->
-                    <div class="voice-container--box">
+                    <div class="voice__box">
                         <div class="voice__img">
                             <img src="/assets/image/voice03.jpg" alt="">
                         </div>
-                        <p class="voice_name">Cさん</p>
-                        <p class="voice_text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                        <p class="voice__name">Cさん</p>
+                        <p class="voice__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
                     </div>
                     <!-- 4枚目 -->
-                    <div class="voice-container--box">
+                    <div class="voice__box">
                         <div class="voice__img">
                             <img src="/assets/image/voice01.jpg" alt="">
                         </div>
-                        <p class="voice_name">Aさん</p>
-                        <p class="voice_text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                        <p class="voice__name">Aさん</p>
+                        <p class="voice__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
                     </div>
                     <!-- 5枚目 -->
-                    <div class="voice-container--box">
+                    <div class="voice__box">
                         <div class="voice__img">
                             <img src="/assets/image/voice02.jpg" alt="">
                         </div>
-                        <p class="voice_name">Bさん</p>
-                        <p class="voice_text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                        <p class="voice__name">Bさん</p>
+                        <p class="voice__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
                     </div>
                     <!-- 6枚目 -->
-                    <div class="voice-container--box">
+                    <div class="voice__box">
                         <div class="voice__img">
                             <img src="/assets/image/voice03.jpg" alt="">
                         </div>
-                        <p class="voice_name">Cさん</p>
-                        <p class="voice_text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                        <p class="voice__name">Cさん</p>
+                        <p class="voice__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
                     </div>
                 </div>
             </section>
 
             <!-- qa -->
             <section class="qa">
-                <h3 class="qa-container__title">
+                <h3 class="qa__container-title">
                     <span class="qa__title">Q&A</span>
-                    <span class="qa__sub-title">よくあるご質問</span>
+                    <span class="qa__title-sub">よくあるご質問</span>
                 </h3>
                 <!-- アコーディオン -->
-                <div class="qa-answer--container">
+                <div class="qa__accordion-container">
                     <!-- 1つ目 -->
-                    <div class="qa-answer--box">
-                        <div class="qa-box accordion-content open">
-                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
-                            <div class="qa-icon">
+                    <div class="qa__accordion-box">
+                        <div class="qa__question accordion-content open">
+                            <p class="qa_text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa_icon">
                                 <i class="bi bi-caret-down-fill"></i>
                             </div>
                         </div>
-                        <div class="answer-container">
-                            <div class="answer-box">
-                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                        <div class="qa__answer-container">
+                            <div class="qa__answer-box">
+                                <p class="qa__answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
                             </div>
                         </div>
                     </div>
                     <!-- 2つ目 -->
-                    <div class="qa-answer--box">
-                        <div class="qa-box accordion-content open">
-                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
-                            <div class="qa-icon">
+                    <div class="qa__accordion-box">
+                        <div class="qa__question accordion-content open">
+                            <p class="qa_text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa_icon">
                                 <i class="bi bi-caret-down-fill"></i>
                             </div>
                         </div>
-                        <div class="answer-container">
-                            <div class="answer-box">
-                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                        <div class="qa__answer-container">
+                            <div class="qa__answer-box">
+                                <p class="qa__answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
                             </div>
                         </div>
                     </div>
                     <!-- 3つ目 -->
-                    <div class="qa-answer--box">
-                        <div class="qa-box accordion-content open">
-                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
-                            <div class="qa-icon">
+                    <div class="qa__accordion-box">
+                        <div class="qa__question accordion-content open">
+                            <p class="qa_text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa_icon">
                                 <i class="bi bi-caret-down-fill"></i>
                             </div>
                         </div>
-                        <div class="answer-container">
-                            <div class="answer-box">
-                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                        <div class="qa__answer-container">
+                            <div class="qa__answer-box">
+                                <p class="qa__answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
                             </div>
                         </div>
                     </div>
                     <!-- 4つ目 -->
-                    <div class="qa-answer--box">
-                        <div class="qa-box accordion-content open">
-                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
-                            <div class="qa-icon">
+                    <div class="qa__accordion-box">
+                        <div class="qa__question accordion-content open">
+                            <p class="qa_text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa_icon">
                                 <i class="bi bi-caret-down-fill"></i>
                             </div>
                         </div>
-                        <div class="answer-container">
-                            <div class="answer-box">
-                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                        <div class="qa__answer-container">
+                            <div class="qa__answer-box">
+                                <p class="qa__answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
                             </div>
                         </div>
                     </div>
                     <!-- 5つ目 -->
-                    <div class="qa-answer--box">
-                        <div class="qa-box accordion-content open">
-                            <p class="qa-text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
-                            <div class="qa-icon">
+                    <div class="qa__accordion-box">
+                        <div class="qa__question accordion-content open">
+                            <p class="qa_text">テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <div class="qa_icon">
                                 <i class="bi bi-caret-down-fill"></i>
                             </div>
                         </div>
-                        <div class="answer-container">
-                            <div class="answer-box">
-                                <p class="answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                        <div class="qa__answer-container">
+                            <div class="qa__answer-box">
+                                <p class="qa__answer-text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
 
             <!-- 問い合わせ -->
             <div class="btn-container">
-                <div class="btn-container__box">
+                <div class="btn-container__btn-box">
                     <div class="btn-container__text-box">
                         <p class="btn-container__text">キラメキクリーム</p>
                         <p class="btn-container__price">税込4,000円</p>
@@ -231,27 +231,27 @@
                 </div>
             </div>
             <!-- ページトップボタン -->
-            <a href="#" id="button-to-top" class="button-to-top">
+            <a href="#" id="back-to-top" class="back-to-top">
                 <i class="bi bi-arrow-up-short"></i>
             </a>
         </main>
 
         <footer class="footer">
-            <h4 class="footer_logo"><a href="#"><img src="/assets/image/footer_logo01.png" alt="Kira-meki"></a></h4>
-            <nav class="footer-nav">
-                <ul class="footer-nav__list">
-                    <li class="footer-nav__item">
+            <h4 class="footer__logo"><img src="/assets/image/footer_logo01.png" alt="Kira-meki"></h4>
+            <nav class="footer__nav">
+                <ul class="footer__nav-list">
+                    <li class="footer__nav-item">
                         <a href="/company/">会社概要</a>
                     </li>
-                    <li class="footer-nav__item">
+                    <li class="footer__nav-item">
                         <a href="/privacy-policy/">個人情報保護ポリシー</a>
                     </li>
-                    <li class="footer-nav__item">
+                    <li class="footer__nav-item">
                         <a href="/contact/">お問い合わせ</a>
                     </li>
                 </ul>
             </nav>
-            <small class="footer-copyright">© 2023 Kira-meki Inc. All rights reserved.</small>
+            <small class="footer__copyright">© 2023 Kira-meki Inc. All rights reserved.</small>
         </footer>
 
         <!-- jQuery -->
